Добавляет разметку внутренней страницы

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         #visitsedona
       </p>
       <ul class="footer__social">
-        <li><a class="social-button" href="#">Twitter</a></li>
-        <li><a class="social-button" href="#">Facebook</a></li>
-        <li><a class="social-button" href="#">Youtube</a></li>
+        <li><a class="footer__social-button" href="#">Twitter</a></li>
+        <li><a class="footer__social-button" href="#">Facebook</a></li>
+        <li><a class="footer__social-button" href="#">Youtube</a></li>
       </ul>
       <p class="footer__copyright">
         <p>Website by</p>
@@ -102,7 +102,7 @@
     <section class="modal modal__booking">
       <h2 class="visually-hidden">Поиск гостиницы в Седонет</h2>
       <!-- Здесь будет форма -->
-      <span class="modal-close">x</span>
+      <span class="modal__close">x</span>
     </section>
 
   </body>
