Добавляет разметку формы на главную страницу

--- a/hotels.html
+++ b/hotels.html
@@ -39,8 +39,8 @@
                 <label for="parking">Парковка</label>
               </li>
               <li class="infrastructure__item">
-                <input type="checkbox" id="wifi" name="wifi">
-                <label for="wifi">Wi-fi</label>
+                <input type="checkbox" id="wi-fi" name="wi-fi">
+                <label for="wi-fi">Wi-fi</label>
               </li>
             </ul>
           </fieldset>
@@ -165,7 +165,7 @@
         <li><a class="footer__social-button" href="#">Youtube</a></li>
       </ul>
       <p class="footer__copyright">
-        <p>Website by</p>
+        <span>Website by</span>
         <a class="footer__button" href="https://htmlacademy.ru">HTML Academy</a>
       </p>
     </footer>
