--- a/index.html
+++ b/index.html
@@ -94,14 +94,31 @@
         <li><a class="footer__social-button" href="#">Youtube</a></li>
       </ul>
       <p class="footer__copyright">
-        <p>Website by</p>
+        <span>Website by</span>
         <a class="footer__button" href="https://htmlacademy.ru">HTML Academy</a>
       </p>
     </footer>
 
-    <section class="modal modal__booking">
-      <h2 class="visually-hidden">Поиск гостиницы в Седонет</h2>
-      <!-- Здесь будет форма -->
+    <section class="modal">
+      <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
+
+      <form class="modal__form" method="post" action="https://echo.htmlacademy.ru">
+        <p>
+          <label for="check-in-date">Дата заезда:</label>
+          <input id="check-in-date" type="date" name="check-in">
+        </p>
+        <p>
+          <label for="check-out-date">Дата выезда:</label>
+          <input id="check-out-date" type="date" name="check-out">
+        </p>
+        <p>
+          <label for="adults-number">Взрослые:</label>
+          <input id="adults-number" type="number" name="adults" value="2">
+          <label for="children-number">Дети:</label>
+          <input id="children-number" type="number" name="children" value="0">
+        </p>
+        <button class="button modal__button" type="submit">Найти</button>
+      </form>
       <span class="modal__close">x</span>
     </section>
 
