--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <nav class="navigation">
-        <a class="navigation__logo">
+        <a class="navigation__logo" href="index.html">
           <img src="http://placehold.it/140x71" width="140" height="71" alt="Логотип Седоны">
         </a>
         <ul class="navigation__list">
@@ -66,9 +66,9 @@
           <fieldset class="filter__price">
             <legend>Стоимость в сутки (р):</legend>
             <label for="min-price">от </label>
-            <input type="text" id="min-price" name="min-price" value="0" disabled>
+            <input type="text" id="min-price" name="min-price" value="0">
             <label for="max-price">до </label>
-            <input type="text" id="max-price" name="max-price" value="3000" disabled>
+            <input type="text" id="max-price" name="max-price" value="3000">
           </fieldset>
 
           <button class="button filter__button" type="submit">Показать</button>
@@ -106,49 +106,55 @@
       <section class="hotels">
         <h2 class="visually-hidden">Список найденного жилья</h2>
         <article class="hotels__item">
-          <h3 class="hotels__title">Amara Resort & Spa</h3>
-          <div class="hotels__picture">
+          <a href="#">
+            <h3 class="hotels__title">Amara Resort & Spa</h3>
+          </a>
+          <a class="hotels__picture" href="#">
             <img src="http://placehold.it/135x92" width="135" height="92" alt="Amara Resort & Spa">
-          </div>
+          </a>
           <div class="hotels__details">
             <p class="holets__type">Гостиница</p>
             <p class="holets__price">От 4000 р.</p>
           </div>
           <div class="hotels__buttons">
-            <button class="button hotels__about-button" type="button">Подробнее</button>
-            <button class="button hotels__book-button" type="button">Забронировать</button>
+            <a class="button hotels__about-button" href="#">Подробнее</a>
+            <a class="button hotels__book-button" href="booking.html">Забронировать</a>
           </div>
           <p class="hotels__rating">Рейтинг: 8,5</p>
         </article>
 
         <article class="hotels__item">
-          <h3 class="hotels__title">Desert Quail Inn</h3>
-          <div class="hotels__picture">
+          <a href="#">
+            <h3 class="hotels__title">Desert Quail Inn</h3>
+          </a>
+          <a class="hotels__picture" href="#">
             <img src="http://placehold.it/135x92" width="135" height="92" alt="Amara Resort & Spa">
-          </div>
+          </a>
           <div class="hotels__details">
             <p class="holets__type">Мотель</p>
             <p class="holets__price">От 3000 р.</p>
           </div>
           <div class="hotels__buttons">
-            <button class="button hotels__about-button" type="button">Подробнее</button>
-            <button class="button hotels__book-button" type="button">Забронировать</button>
+            <a class="button hotels__about-button" href="#">Подробнее</a>
+            <a class="button hotels__book-button" href="booking.html">Забронировать</a>
           </div>
           <p class="hotels__rating">Рейтинг: 8,9</p>
         </article>
 
         <article class="hotels__item">
-          <h3 class="hotels__title">Villas At Poco Diablo</h3>
-          <div class="hotels__picture">
+          <a href="#">
+            <h3 class="hotels__title">Villas At Poco Diablo</h3>
+          </a>
+          <a class="hotels__picture" href="#">
             <img src="http://placehold.it/135x92" width="135" height="92" alt="Amara Resort & Spa">
-          </div>
+          </a>
           <div class="hotels__details">
             <p class="holets__type">Апартаменты</p>
             <p class="holets__price">От 2000 р.</p>
           </div>
           <div class="hotels__buttons">
-            <button class="button hotels__about-button" type="button">Подробнее</button>
-            <button class="button hotels__book-button" type="button">Забронировать</button>
+            <a class="button hotels__about-button" href="#">Подробнее</a>
+            <a class="button hotels__book-button" href="booking.html">Забронировать</a>
           </div>
           <p class="hotels__rating">Рейтинг: 9,2</p>
         </article>
