Добавляет графику, подключает контентные изображения

--- a/hotels.html
+++ b/hotels.html
@@ -9,7 +9,7 @@
     <header class="header">
       <nav class="navigation">
         <a class="navigation__logo" href="index.html">
-          <img src="http://placehold.it/140x71" width="140" height="71" alt="Логотип Седоны">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
         </a>
         <ul class="navigation__list">
           <li class="navigation__item"><a href="#">Информация</a></li>
@@ -110,7 +110,7 @@
             <h3 class="hotels__title">Amara Resort & Spa</h3>
           </a>
           <a class="hotels__picture" href="#">
-            <img src="http://placehold.it/135x92" width="135" height="92" alt="Amara Resort & Spa">
+            <img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
           </a>
           <div class="hotels__details">
             <p class="holets__type">Гостиница</p>
@@ -128,7 +128,7 @@
             <h3 class="hotels__title">Desert Quail Inn</h3>
           </a>
           <a class="hotels__picture" href="#">
-            <img src="http://placehold.it/135x92" width="135" height="92" alt="Amara Resort & Spa">
+            <img src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
           </a>
           <div class="hotels__details">
             <p class="holets__type">Мотель</p>
@@ -146,7 +146,7 @@
             <h3 class="hotels__title">Villas At Poco Diablo</h3>
           </a>
           <a class="hotels__picture" href="#">
-            <img src="http://placehold.it/135x92" width="135" height="92" alt="Amara Resort & Spa">
+            <img src="img/hotel-3.jpg" width="135" height="90" alt="Villas At Poco Diablo">
           </a>
           <div class="hotels__details">
             <p class="holets__type">Апартаменты</p>
@@ -172,7 +172,9 @@
       </ul>
       <p class="footer__copyright">
         <span>Website by</span>
-        <a class="footer__button" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="footer__button" href="https://htmlacademy.ru">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+        </a>
       </p>
     </footer>
 
