--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <nav class="navigation">
         <a class="navigation__logo">
-          <img src="http://placehold.it/140x71" width="140" height="71" alt="Логотип Седоны">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
         </a>
         <ul class="navigation__list">
           <li class="navigation__item"><a href="#">Информация</a></li>
@@ -80,7 +80,7 @@
 
       <section class="map">
         <h2 class="visually-hidden">Карта города</h2>
-        <!-- Здесь будет карта -->
+        <img src="img/map.jpg" width="1200" height="593" alt="Карта городы Седона">
       </section>
     </main>
 
@@ -95,7 +95,9 @@
       </ul>
       <p class="footer__copyright">
         <span>Website by</span>
-        <a class="footer__button" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="footer__button" href="https://htmlacademy.ru">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+        </a>
       </p>
     </footer>
 
