--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
       <section class="features">
         <h2 class="visually-hidden">Преимущества Седоны перед Гранд Каньоном</h2>
+        <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать в Седону!">
         <p>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         <ul class="features__list">
