--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1 class="visually-hidden">Седона</h1>
 
       <section class="features">
-        <h2 class="visually-hidden">Преимущества Седоны перед Гранд Каньоном</h2>
+        <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
         <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать в Седону!">
         <p>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
