--- a/hotels.html
+++ b/hotels.html
@@ -24,7 +24,7 @@
       <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
 
       <section class="filter">
-        <h2 class="visually-hidden">Фильтр поиска жилья</h2>
+        <h2 class="visually-hidden">Фильтр поиска</h2>
 
         <form class="filter__form" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="filter__infrastructure infrastructure">
