--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@
       <form class="modal__form" method="post" action="https://echo.htmlacademy.ru">
         <p>
           <label for="check-in-date">Дата заезда:</label>
-          <input id="check-in-date" type="date" name="check-in">
+          <input id="check-in-date" type="text" name="check-in" placeholder="24 апреля 2017">
+          <img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты заезда">
         </p>
         <p>
           <label for="check-out-date">Дата выезда:</label>
-          <input id="check-out-date" type="date" name="check-out">
+          <input id="check-out-date" type="text" name="check-out" placeholder="4 июля 2017">
+          <img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты выезда">
         </p>
         <p>
           <label for="adults-number">Взрослые:</label>
