--- a/index.html
+++ b/index.html
@@ -109,12 +109,16 @@
         <p>
           <label for="check-in-date">Дата заезда:</label>
           <input id="check-in-date" type="text" name="check-in" placeholder="24 апреля 2017">
-          <img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты заезда">
+          <button class="modal__calendar-button" type="button">
+            <!--<img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты заезда">-->
+          </button>
         </p>
         <p>
           <label for="check-out-date">Дата выезда:</label>
           <input id="check-out-date" type="text" name="check-out" placeholder="4 июля 2017">
-          <img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты выезда">
+          <button class="modal__calendar-button" type="button">
+            <!--<img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты выезда">-->
+          </button>
         </p>
         <p>
           <label for="adults-number">Взрослые:</label>
