Добавляет текст внутри кнопки

--- a/index.html
+++ b/index.html
@@ -110,13 +110,14 @@
           <label for="check-in-date">Дата заезда:</label>
           <input id="check-in-date" type="text" name="check-in" placeholder="24 апреля 2017">
           <button class="modal__calendar-button" type="button">
-            <!--<img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты заезда">-->
+            <span class="visually-hidden">Выбрать дату заезда</span>
           </button>
         </p>
         <p>
           <label for="check-out-date">Дата выезда:</label>
           <input id="check-out-date" type="text" name="check-out" placeholder="4 июля 2017">
           <button class="modal__calendar-button" type="button">
+            <span class="visually-hidden">Выбрать дату выезда</span>
             <!--<img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты выезда">-->
           </button>
         </p>
