--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section class="modal">
       <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
 
-      <form class="modal__form" method="post" action="https://echo.htmlacademy.ru">
+      <form class="modal__form" method="post" action="https://htmlacademy.ru/intensive/htmlcss">
         <p>
           <label for="check-in-date">Дата заезда:</label>
           <input class="asd" id="check-in-date" type="text" name="check-in" value="24 апреля 2017">
