--- a/index.html
+++ b/index.html
@@ -9,143 +9,156 @@
   </head>
 
   <body>
+    <div class="container">
+      <header class="header">
+        <nav class="navigation">
+          <a class="navigation__logo">
+            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
+          </a>
+          <ul class="navigation__list list-decoration">
+            <li class="navigation__item"><a href="#">Информация</a></li>
+            <li class="navigation__item"><a href="#">Фото и видео</a></li>
+            <li class="navigation__item"><a href="#">Карта штата</a></li>
+            <li class="navigation__item"><a href="hotels.html">Гостиницы</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <header class="header">
-      <nav class="navigation">
-        <a class="navigation__logo">
-          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
-        </a>
-        <ul class="navigation__list list-decoration">
-          <li class="navigation__item"><a href="#">Информация</a></li>
-          <li class="navigation__item"><a href="#">Фото и видео</a></li>
-          <li class="navigation__item"><a href="#">Карта штата</a></li>
-          <li class="navigation__item"><a href="hotels.html">Гостиницы</a></li>
+      <main>
+        <h1 class="visually-hidden">Седона</h1>
+
+        <section class="features">
+          <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
+          <div class="features__img">
+            <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать в Седону!">
+          </div>
+          <div class="features__text">
+            <p class="features__tagline">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+            <p class="features__reasons">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          </div>
+          <ol class="features__list list-decoration">
+            <li class="features__item features__item--img-right">
+              <div class="features__description">
+                <p>— №1 —</p>
+                <h3>Настоящий городок</h3>
+                <p>Седона — не аттрацион для туристов, там течёт своя жизнь</p>
+              </div>
+              <div class="features__bg-img"></div>
+            </li>
+
+            <li class="features__details-item">
+              <h4>Жильё</h4>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="features__details-item">
+              <h4>Еда</h4>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="features__details-item">
+              <h4>Сувениры</h4>
+              <p>Не только китайского, но и местного производства!</p>
+            </li>
+
+            <li class="features__item features__item--img-left">
+              <div class="features__bg-img"></div>
+              <div class="features__description">
+                <p>— №2 —</p>
+                <h3>Там есть мост дьявола</h3>
+                <p>Да, по нему можно пройти! Если, конечно, вы осмелитесь</p>
+              </div>
+            </li>
+            <li class="features__item">
+              <p>— №3 —</p>
+              <h3>Небольшая площадь</h3>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="features__item">
+              <p>— №4 —</p>
+              <h3>Красивая дорога</h3>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="features__item">
+              <p>— №5 —</p>
+              <h3>Мало туристов</h3>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ol>
+        </section>
+
+        <section class="booking">
+          <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+          <p class="booking__title">Заинтересовались?</p>
+          <p class="booking__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="button booking__button" href="booking.html">Поиск гостиницы в Седоне</a>
+        </section>
+
+        <section class="map">
+          <h2 class="visually-hidden">Карта города</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d498456.6696671246!2d-111.85820742787433!3d34.842997749743624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1553531611523" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <p>
+            <img src="img/map.jpg" width="1200" height="593" alt="Карта городы Седона">
+          </p>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <p class="footer__hashtag">
+          #visitsedona
+        </p>
+        <ul class="footer__social list-decoration">
+          <li><a class="footer__button footer__button--twitter" href="#">
+            <span class="visually-hidden">Twitter</span>
+          </a></li>
+          <li><a class="footer__button footer__button--facebook" href="#">
+            <span class="visually-hidden">Facebook</span>
+          </a></li>
+          <li><a class="footer__button footer__button--youtube" href="#">
+            <span class="visually-hidden">Youtube</span>
+          </a></li>
         </ul>
-      </nav>
-    </header>
-
-    <main class="container">
-      <h1 class="visually-hidden">Седона</h1>
-
-      <section class="features">
-        <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
-        <div class="features__img">
-          <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать в Седону!">
-        </div>
-        <p class="features__tagline">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
-        <p class="features__reasons">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <ol class="features__list list-decoration">
-          <li class="features__item features__item--image-right">
-            <p>— №1 —</p>
-            <h3>Настоящий городок</h3>
-            <p>Седона — не аттрацион для туристов, там течёт своя жизнь</p>
-          </li>
-          <li class="features__item features__item--image-left">
-            <p>— №2 —</p>
-            <h3>Там есть мост дьявола</h3>
-            <p>Да, по нему можно пройти! Если, конечно, вы осмелитесь</p>
-          </li>
-          <li class="features__item">
-            <p>— №3 —</p>
-            <h3>Небольшая площадь</h3>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="features__item">
-            <p>— №4 —</p>
-            <h3>Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="features__item">
-            <p>— №5 —</p>
-            <h3>Мало туристов</h3>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ol>
-        <ul class="features__details-list list-decoration">
-          <li class="features__details-item">
-            <h4>Жильё</h4>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="features__details-item">
-            <h4>Еда</h4>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="features__details-item">
-            <h4>Сувениры</h4>
-            <p>Не только китайского, но и местного производства!</p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="booking">
-        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-        <p class="booking__title">Заинтересовались?</p>
-        <p class="booking__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button booking__button" href="booking.html">Поиск гостиницы в Седоне</a>
-      </section>
-
-      <section class="map">
-        <h2 class="visually-hidden">Карта города</h2>
-        <img src="img/map.jpg" width="1200" height="593" alt="Карта городы Седона">
-      </section>
-    </main>
-
-    <footer class="footer">
-      <p class="footer__hashtag">
-        #visitsedona
-      </p>
-      <ul class="footer__social list-decoration">
-        <li><a class="footer__button footer__button--twitter" href="#">
-          <span class="visually-hidden">Twitter</span>
-        </a></li>
-        <li><a class="footer__button footer__button--facebook" href="#">
-          <span class="visually-hidden">Facebook</span>
-        </a></li>
-        <li><a class="footer__button footer__button--youtube" href="#">
-          <span class="visually-hidden">Youtube</span>
-        </a></li>
-      </ul>
-      <p class="footer__copyright">
-        <span>Website by</span>
-        <a class="footer__logo-htmlacademy" href="https://htmlacademy.ru">
-          <!--<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">-->
-          <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="115" height="41" viewBox="0 0 108.08 36.85" alt="Логотип HTML Academy">
-            <title>logo-htmlacademy-small1</title>
-            <path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20">
-            </path>
-          </svg>
-        </a>
-      </p>
-    </footer>
-
-    <section class="modal">
-      <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
-
-      <form class="modal__form" method="post" action="https://htmlacademy.ru/intensive/htmlcss">
-        <p>
-          <label for="check-in-date">Дата заезда:</label>
-          <input class="asd" id="check-in-date" type="text" name="check-in" value="24 апреля 2017">
-          <button class="modal__calendar-button" type="button">
-            <span class="visually-hidden">Выбрать дату заезда</span>
-          </button>
+        <p class="footer__copyright">
+          <span>Website by</span>
+          <a class="footer__logo-htmlacademy" href="https://htmlacademy.ru">
+            <!--<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">-->
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="115" height="41" viewBox="0 0 108.08 36.85" alt="Логотип HTML Academy">
+              <title>logo-htmlacademy-small1</title>
+              <path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20">
+              </path>
+            </svg>
+          </a>
         </p>
-        <p>
-          <label for="check-out-date">Дата выезда:</label>
-          <input id="check-out-date" type="text" name="check-out" value="4 июля 2017">
-          <button class="modal__calendar-button" type="button">
-            <span class="visually-hidden">Выбрать дату выезда</span>
-            <!--<img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты выезда">-->
-          </button>
-        </p>
-        <p>
-          <label for="adults-number">Взрослые:</label>
-          <input id="adults-number" type="number" name="adults" value="2">
-          <label for="children-number">Дети:</label>
-          <input id="children-number" type="number" name="children" value="0">
-        </p>
-        <button class="button modal__button" type="submit">Найти</button>
-      </form>
-    </section>
+      </footer>
 
+      <section class="modal">
+        <h2 class="visually-hidden">Поиск жилья в Седоне</h2>
+
+        <form class="modal__form" method="post" action="https://htmlacademy.ru/intensive/htmlcss">
+          <p>
+            <label for="check-in-date">Дата заезда:</label>
+            <input class="asd" id="check-in-date" type="text" name="check-in" value="24 апреля 2017">
+            <button class="modal__calendar-button" type="button">
+              <span class="visually-hidden">Выбрать дату заезда</span>
+            </button>
+          </p>
+          <p>
+            <label for="check-out-date">Дата выезда:</label>
+            <input id="check-out-date" type="text" name="check-out" value="4 июля 2017">
+            <button class="modal__calendar-button" type="button">
+              <span class="visually-hidden">Выбрать дату выезда</span>
+              <!--<img src="img/calendar.svg" width="21" height="22" alt="Календарь для выбора даты выезда">-->
+            </button>
+          </p>
+          <p>
+            <label for="adults-number">Взрослые:</label>
+            <input id="adults-number" type="number" name="adults" value="2">
+            <label for="children-number">Дети:</label>
+            <input id="children-number" type="number" name="children" value="0">
+          </p>
+          <button class="button modal__button" type="submit">Найти</button>
+        </form>
+      </section>
+    </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
