--- a/hotels.html
+++ b/hotels.html
@@ -85,7 +85,7 @@
                 <div class="price__range-toggle price__range-toggle--min"></div>
                 <div class="price__range-toggle price__range-toggle--max"></div>
               </div>
-              <button class="button filter__button" type="submit">Показать</button>
+              <button class="filter__button" type="submit">Показать</button>
             </fieldset>
 
           </form>
@@ -134,8 +134,8 @@
                 <p class="hotels__price">От 4000 р.</p>
               </div>
               <div class="hotels__buttons">
-                <a class="button hotels__about-button" href="#">Подробнее</a>
-                <a class="button hotels__book-button" href="booking.html">Забронировать</a>
+                <a class="hotels__about-button" href="#">Подробнее</a>
+                <a class="hotels__book-button" href="booking.html">Забронировать</a>
               </div>
             </div>
             <div class="hotels__rating">
@@ -157,8 +157,8 @@
                 <p class="hotels__price">От 3000 р.</p>
               </div>
               <div class="hotels__buttons">
-                <a class="button hotels__about-button" href="#">Подробнее</a>
-                <a class="button hotels__book-button" href="booking.html">Забронировать</a>
+                <a class="hotels__about-button" href="#">Подробнее</a>
+                <a class="hotels__book-button" href="booking.html">Забронировать</a>
               </div>
             </div>
             <div class="hotels__rating">
@@ -180,8 +180,8 @@
                 <p class="hotels__price">От 2000 р.</p>
               </div>
               <div class="hotels__buttons">
-                <a class="button hotels__about-button" href="#">Подробнее</a>
-                <a class="button hotels__book-button" href="booking.html">Забронировать</a>
+                <a class="hotels__about-button" href="#">Подробнее</a>
+                <a class="hotels__book-button" href="booking.html">Забронировать</a>
               </div>
             </div>
             <div class="hotels__rating">
